--- a/src/frontend/html/index.html
+++ b/src/frontend/html/index.html
@@ -39,15 +39,18 @@
         <label class="label-form required">E-mail</label>
         <input class="input-text input-text--blue"
           pattern="^(([^<>()[\]\\.,;:\s@\&quot;]+(\.[^<>()[\]\\.,;:\s@\&quot;]+)*)|(\&quot;.+\&quot;))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$"
-          data-drupal-selector="edit-e-mail" type="email" id="email" value="" size="60" maxlength="254"
-          required="required" aria-required="true">
+          type="email" autocomplete="email" id="email" value="" size="60" maxlength="254" required="required"
+          aria-required="true">
       </div>
 
       <div class="form-item" id="block-city">
         <label class="label-form required">Город прохождения стажировки</label>
         <select class="input-text input-text--blue form-select required one-column" id="city" required="required"
           aria-required="true">
-          <option value="" selected="selected">Азия/Иркутск</option>
+          <option value="" selected="selected">- Выберите -</option>
+          <div id="select-city">
+
+          </div>
         </select>
       </div>
 
@@ -74,14 +77,15 @@
     </div>
 
     <div id="edit-row-04">
-
+      <script src="branch.js"></script>
       <div class="form-item flexbox flexbox--jcsb" id="block-branch">
         <label class="label-form required">Предпочитаемое направление стажировки</label>
         <select class="input-text input-text--blue form-select required one-column" id="branch" required="required"
           aria-required="true">
           <option value="" selected="selected">- Выберите -</option>
-          <option value="backend">Backend разработка</option>
-          <option value="frontend">Frontend разработка</option>
+          <div id="select-branch">
+
+          </div>
         </select>
       </div>
 
@@ -94,12 +98,6 @@
     </div>
 
     <div id="edit-row-05">
-
-      <div class="flexbox flexbox--jcsb" id="block_resume">
-        <label class="">Резюме</label>
-        <input class="input-text input-text--blue one-column custom-file-input" type="file" id="resume" value=""
-          size="60" maxlength="255" required="required" aria-required="true">
-      </div>
 
       <div id="edit-soglasen-s-politikoy-konfidencialnosti--wrapper">
         <div id="block_policy_confidential" class="flexbox flexbox--jcsb">
