--- a/src/frontend/html/index.html
+++ b/src/frontend/html/index.html
@@ -1,46 +1,43 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
 
 <head>
   <title>Заявка на стажировку</title>
-  <meta charset="UTF-8">
-  <meta content="width=device-width, initial-scale=1">
-  <link href="css/main.css" rel="stylesheet" type="text/css">
-  <link href="css/webform.css" rel="stylesheet" type="text/css">
-  <link href="css/normalyze.css" rel="stylesheet" type="text/css">
+  <meta charset="UTF-8" />
+  <meta content="width=device-width, initial-scale=1" />
+  <link href="css/main.css" rel="stylesheet" type="text/css" />
+  <link href="css/webform.css" rel="stylesheet" type="text/css" />
+  <link href="css/normalyze.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
   <div class="rounded-block rounded-block--white rounded-block--shadow right js-form-wrapper form-wrapper"
     id="edit-formcontainer">
     <div id="edit-markup">
-      <h4 id="header-form">Заполните форму для отправки заявки на стажировку</h4>
+      <h4 id="header-form">
+        Заполните форму для отправки заявки на стажировку
+      </h4>
     </div>
 
     <div class="flexbox flexbox--jcsb" id="row-01">
-
       <div class="js-form-item form-item js-form-type-textfield form-type-textfield" id="block-first-name">
         <label class="label-form required js-form-required form-required">Имя</label>
         <input class="input-text input-text--blue required" pattern="^[А-ЯЁA-Z]{1}[а-яёa-z]{1,}" type="text"
-          id="first-name" value="" size="60" maxlength="255" required="required" aria-required="true">
+          id="first-name" value="" size="60" maxlength="255" required="required" aria-required="true" />
       </div>
 
       <div class="js-form-item form-item js-form-type-textfield form-type-textfield" id="block-last-name">
         <label class="label-form required">Фамилия</label>
         <input class="input-text input-text--blue" pattern="^[А-ЯЁA-Z]{1}[а-яёa-z]{1,}" type="text" id="last-name"
-          value="" size="60" maxlength="255" required="required" aria-required="true">
+          value="" size="60" maxlength="255" required="required" aria-required="true" />
       </div>
-
     </div>
 
     <div class="flexbox flexbox--jcsb js-form-wrapper form-wrapper" id="row-02">
-
       <div class="form-item" id="block-email">
         <label class="label-form required">E-mail</label>
-        <input class="input-text input-text--blue"
-          pattern="^(([^<>()[\]\\.,;:\s@\&quot;]+(\.[^<>()[\]\\.,;:\s@\&quot;]+)*)|(\&quot;.+\&quot;))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$"
-          type="email" autocomplete="email" id="email" value="" size="60" maxlength="254" required="required"
-          aria-required="true">
+        <input class="input-text input-text--blue" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}" type="email"
+          autocomplete="email" id="email" value="" size="60" maxlength="254" required="required" aria-required="true" />
       </div>
 
       <div class="form-item" id="block-city">
@@ -48,64 +45,51 @@
         <select class="input-text input-text--blue form-select required one-column" id="city" required="required"
           aria-required="true">
           <option value="" selected="selected">- Выберите -</option>
-          <div id="select-city">
-
-          </div>
         </select>
       </div>
-
     </div>
 
     <div class="flexbox flexbox--jcsb" id="row-03">
-
       <div id="block-studing">
         <label class="label-form">Место учёбы</label>
-        <input class="input-text input-text--blue form-select one-column" id="studing" pattern="[^&amp;|<|>]*"
-          type="text" value="" size="60" maxlength="255" required="required" aria-required="true">
+        <input class="input-text input-text--blue form-select one-column" id="studing" pattern="^(?!.*[&|<>]).*$"
+          type="text" value="" size="60" maxlength="255" />
       </div>
-
     </div>
 
     <div class="flexbox flexbox--jcsb" id="row-04">
-
       <div>
         <label class="label-form required">Образование</label>
         <input class="input-text input-text--blue one-column" type="text" id="education" value="" size="60"
-          maxlength="255" required="required" aria-required="true" pattern="[^&amp;|<|>]*">
+          maxlength="255" required="required" aria-required="true" pattern="^(?!.*[&|<>]).*$" />
       </div>
-
     </div>
 
     <div id="edit-row-04">
-      <script src="branch.js"></script>
       <div class="form-item flexbox flexbox--jcsb" id="block-branch">
         <label class="label-form required">Предпочитаемое направление стажировки</label>
         <select class="input-text input-text--blue form-select required one-column" id="branch" required="required"
           aria-required="true">
           <option value="" selected="selected">- Выберите -</option>
-          <div id="select-branch">
-
-          </div>
         </select>
       </div>
-
     </div>
 
     <div class="flexbox flexbox--jcsb" id="block_target">
       <label>Ваша цель прохождения стажировки?</label>
-      <textarea pattern="[^&amp;|<|>]*" id="target_internship" rows="5" cols="60"
+      <textarea pattern="^(?!.*[&|<>]).*$" id="target_internship" rows="5" cols="60"
         class="input-text input-text--blue one-column"></textarea>
     </div>
 
     <div id="edit-row-05">
-
       <div id="edit-soglasen-s-politikoy-konfidencialnosti--wrapper">
         <div id="block_policy_confidential" class="flexbox flexbox--jcsb">
           <div>
             <input type="checkbox" onchange="document.getElementById('actions-submit').disabled = !this.checked;" ,
-              id="edit-soglasen-s-politikoy-konfidencialnosti-" value="Да" class="">
+              id="edit-soglasen-s-politikoy-konfidencialnosti-" value="Да" class="" />
 
-            <label>Согласен с <a target="_blank"
+            <label>Согласен с
+              <a target="_blank"
                 href="https://www.ispsystem.net/contracts/personal-data-processing-policy.html">Политикой
                 конфиденциальности</a>
               <span class="form-required">*</span></label>
@@ -113,18 +97,29 @@
         </div>
       </div>
 
-      <div class="form-actions webform-actions js-form-wrapper form-wrapper" id="edit-actions"><input
-          class="webform-button--submit button button-blue button button--primary js-form-submit form-submit"
-          type="submit" id="actions-submit" disabled="disabled" name="op" value="Отправить">
+      <div class="form-actions webform-actions js-form-wrapper form-wrapper" id="edit-actions">
+        <div>
+          <input
+            class="webform-button--submit button button-blue error button button--primary js-form-submit form-submit"
+            type="submit" id="actions-submit" disabled="disabled" name="op" value="Отправить" />
+        </div>
       </div>
     </div>
   </div>
-  </div>
-  </div>
-
-  <script>      const idKeyboardArray = ["first-name", "last-name",
-      "email", "studing", "education", "target_internship", "resume",
-      "edit-soglasen-s-politikoy-konfidencialnosti-", "actions-submit"];
+  <script src="node_modules/axios/dist/axios.min.js"></script>
+  <script src="js/webform.js"></script>
+  <script>
+    const idKeyboardArray = [
+      "first-name",
+      "last-name",
+      "email",
+      "studing",
+      "education",
+      "target_internship",
+      "resume",
+      "edit-soglasen-s-politikoy-konfidencialnosti-",
+      "actions-submit",
+    ];
   </script>
   <script src="js/keyboardNavigation.js"></script>
   <script src="js/requestIntern.js"></script>
