Base work project

--- a/src/frontend/html/index.html
+++ b/src/frontend/html/index.html
@@ -89,9 +89,7 @@
               id="edit-soglasen-s-politikoy-konfidencialnosti-" value="Да" class="" />
 
             <label>Согласен с
-              <a target="_blank"
-                href="https://www.ispsystem.net/contracts/personal-data-processing-policy.html">Политикой
-                конфиденциальности</a>
+              <a target="_blank" href="">Политикой конфиденциальности</a>
               <span class="form-required">*</span></label>
           </div>
         </div>
